<resources>
    <string name="app_name">VIVA PAIN- No Pain No Gain</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="contact">contact</string>
    <string name="map">map</string>
    <string name="settings">settings</string>
    <string name="train_your_muscle">Train Your Muscle</string>
    <string name="get_your_diet">Get Your Diet</string>
    <string name="no_pain_no_gain">NO PAIN NO GAIN</string>
    <string name="salute_viva_the_pain">SALUTE! VIVA THE PAIN!</string>
    <string name="mobile_network_alert">Mobile Network Alert</string>
    <string name="night_mode">Night Mode</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="if_you_have_any_thoughts_suggestions_or_n_if_you_just_want_to_say_hi_don_t_hesitate_to_n_contact_us_anytime">If you have any thoughts, suggestions, or \n if you just want to say hi. Don\'t hesitate to \n contact us anytime!</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="email_us">Email Us</string>
    <string name="chest"><u>CHEST</u></string>
    <string name="diet_food">diet_food</string>
    <string name="food_routine">Food Routine</string>
    <string name="_2_tuna">2) Tuna</string>
    <string name="dinner">Dinner :</string>
    <string name="_2_chicken">2) Chicken</string>
    <string name="_1_salad">1) Salad</string>
    <string name="lunch">Lunch :</string>
    <string name="_2_apple">2) Apple</string>
    <string name="_1_banana">1) Banana</string>
    <string name="snacks">Snacks:</string>
    <string name="_2_eggs">2) Eggs</string>
    <string name="_1_toast_and_white_cheese">1) Toast and white cheese</string>
    <string name="breakfast">BreakFast:</string>
    <string name="activities"><b>Activities</b></string>
    <string name="chest_description">Chest Description</string>
    <string name="legs"><u>LEGS</u></string>
    <string name="legs_description">Legs Description</string>
    <string name="no_matter_if_your_goal_is_a_sculpted_chest_or_a_stronger_upper_body_to_help_you_lift_kiddos_into_the_air_working_the_chest_muscles_can_only_enhance_your_quality_of_life_the_above_exercises_along_with_a_high_protein_diet_may_help_increase_the_size_and_strength_of_these_muscles">No matter if your goal is a sculpted chest or a stronger upper body to help you lift kiddos into the air, working the chest muscles can only enhance your quality of life. The above exercises, along with a high protein diet, may help increase the size and strength of these muscles.</string>
    <string name="leg_workouts_engage_the_major_muscle_groups_of_your_body_which_helps_to_improve_overall_athletic_performance_and_support_healthy_movement_patterns_in_your_daily_life_a_strong_lower_body_will_also_help_to_prevent_injury_and_manage_chronic_conditions_such_as_arthritis_heart_disease_and_diabetes">Leg workouts engage the major muscle groups of your body, which helps to improve overall athletic performance and support healthy movement patterns in your daily life. A strong lower body will also help to prevent injury and manage chronic conditions such as arthritis, heart disease, and diabetes.</string>
    <string name="StartLogo">TODO</string>
    <string name="change_photo">Change photo</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="weight_lost_this_month">Weight lost this month</string>
    <string name="weight_lost">weight lost</string>
    <string name="ageInserted">age</string>
    <string name="training_hours_this_month">Training hours this month</string>
    <string name="trainedhours">TrainedHours</string>
    <string name="rating">Rating</string>
    <string name="modify_data">Modify Data</string>
    <string name="profilePhoto">ProfilePhoto</string>
    <string name="my_profile">My Profile</string>
    <string name="training_hours">Training hours</string>
    <string name="save">Save</string>
    <string name="find">Find</string>
    <string name="google_map_key">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="dismiss">Dismiss</string>
    <string name="check">Check</string>
    <string name="activity">activity</string>
    <string name="back">Back</string>
    <string name="steps">Steps</string>
    <string name="bicep"><u>Bicep</u></string>
    <string name="triceps"><u>Triceps</u></string>
    <string name="the_biceps_is_a_muscle_on_the_front_part_of_the_upper_arm_the_biceps_includes_a_short_head_and_a_long_head_that_work_as_a_single_muscle_n_nthe_biceps_is_attached_to_the_arm_bones_by_tough_connective_tissues_called_tendons_n_nthe_tendons_that_connect_the_biceps_muscle_to_the_shoulder_joint_in_two_places_are_called_the_proximal_biceps_tendons_n_nthe_tendon_that_attaches_the_biceps_muscle_to_the_forearm_bones_radius_and_ulna_is_called_the_distal_biceps_tendon_n_nwhen_the_biceps_contracts_it_pulls_the_forearm_up_and_rotates_it_outward">The biceps is a muscle on the front part of the upper arm. The biceps includes a “short head” and a “long head” that work as a single muscle. \n\nThe biceps is attached to the arm bones by tough connective tissues called tendons. \n\nThe tendons that connect the biceps muscle to the shoulder joint in two places are called the proximal biceps tendons. \n\nThe tendon that attaches the biceps muscle to the forearm bones (radius and ulna) is called the distal biceps tendon. \n\nWhen the biceps contracts, it pulls the forearm up and rotates it outward.</string>
    <string name="abs"><u>Abs</u></string>
    <string name="abdominal_exercises_are_a_type_of_strength_exercise_that_affect_the_abdominal_muscles_colloquially_known_as_the_stomach_muscles_or_abs_n_nhuman_abdominal_consist_of_four_muscles_which_are_the_rectos_abdomens_internal_oblique_external_oblique_and_transversus_abdominis_n_nwhen_performing_abdominal_exercises_it_is_important_to_understand_the_effects_functions_the_types_of_exercises_and_think_about_how_to_perform_this_exercise_safely">Abdominal exercises are a type of strength exercise that affect the abdominal muscles (colloquially known as the stomach muscles or abs). \n\nHuman abdominal consist of four muscles which are the rectos abdomens, internal oblique, external oblique, and transversus abdominis. \n\nWhen performing abdominal exercises it is important to understand the effects, functions, the types of exercises, and think about how to perform this exercise safely.</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">sign in</string>
    <string name="weight">Weight</string>
    <string name="who_are_you">Who are you?</string>
    <string name="continue_without_signing_in">continue without signing in?</string>
    <string name="i_m_a_gym_owner">I\'m a gym owner</string>
    <string name="i_m_a_trainee">I\'m a trainee</string>
    <string name="next">Next</string>
    <string name="num">num</string>
    <string name="graph">Graph</string>
    <string name="date">DATE</string>
    <string name="date_year_month">DATE(YEAR/MONTH)</string>
    <string name="detailed_gyms">Detailed gyms</string>
    <string name="gym_name">Gym name</string>
    <string name="location">Location</string>
    <string name="calories">calories</string>
    <string name="add_gym">Add Gym</string>
    <string name="let_s_add_your_gym">LET\'S ADD YOUR GYM</string>
    <string name="phone_number">phone number</string>
    <string name="gender_allowed">gender Allowed</string>
    <string name="daily_entry_price">daily Entry Price</string>
    <string name="month_plan_price">month Plan Price</string>
    <string name="working_times">working Times</string>
    <string name="allowed_gender">Allowed Gender</string>
    <string name="monthly_subscription">Monthly Subscription</string>
    <string name="open_hours">Open Hours</string>
    <string name="weight_graph">Weight Graph</string>
    <string name="training_graph">Training Graph</string>
    <string name="the_chest_muscles_could_be_considered_a_defining_part_of_strength_anatomy_they_are_involved_in_actions_such_as_squeezing_a_set_of_loppers_to_cut_a_tree_branch_and_pushing_a_door_open_they_are_also_the_primary_muscles_referenced_when_debating_upper_body_strength_n_nfor_body_builders_and_those_interested_in_general_muscular_aesthetics_the_chest_muscles_are_the_defining_part_of_muscle_mass_powerlifters_rely_on_them_for_the_bench_press_to_score_the_greatest_lift_but_these_muscles_are_also_incredibly_important_from_a_functional_standpoint_because_they_support_the_movement_of_the_arms">The chest muscles could be considered a defining part of strength anatomy. They are involved in actions such as squeezing a set of loppers to cut a tree branch and pushing a door open. They are also the primary muscles referenced when debating upper body strength. \n\nFor body builders and those interested in general muscular aesthetics, the chest muscles are the defining part of muscle mass. Powerlifters rely on them for the bench press to score the greatest lift.But these muscles are also incredibly important from a functional standpoint because they support the movement of the arms.</string>
    <string name="when_you_think_of_leg_exercises_odds_are_high_your_mind_goes_straight_to_squats_deadlifts_and_variations_thereof_but_lower_body_moves_enlist_more_than_just_your_quads_and_hamstrings_when_you_do_these_leg_exercises_and_workouts_you_re_not_just_hitting_the_major_muscles_you_also_work_your_core_improve_your_balance_and_hone_things_like_grip_strength_which_pays_dividends_in_the_long_run">When you think of leg exercises, odds are high your mind goes straight to squats, deadlifts, and variations thereof. But lower-body moves enlist more than just your quads and hamstrings. When you do these leg exercises and workouts, you’re not just hitting the major muscles. You also work your core, improve your balance, and hone things like grip strength, which pays dividends in the long run.</string>
    <string name="one_grapefruit_n_two_poached_eggs_or_fried_in_a_non_stick_pan_n_two_slices_whole_n_grain_toast_with_one_pat_of_butter_each_n_one_cup_low_fat_milk_n_one_cup_of_black_coffee_or_herbal_tea">- One grapefruit \n- Two poached eggs (or fried in a non-stick pan)\n- Two slices whole\n- Grain toast with one pat of butter each \n- One cup low-fat milk \n- One cup of black coffee or herbal tea</string>
    <string name="macronutrients_approximately_555_calories_with_27_grams_protein_63_grams_carbohydrates_and_23_grams_fat">(Macronutrients: Approximately 555 calories with 27 grams protein, 63 grams carbohydrates, and 23 grams fat)</string>
    <string name="exit">Exit</string>
    <string name="dinnerpic">DinnerPic</string>
    <string name="gym_address">Gym address</string>
    <string name="monthly_plan">Monthly plan</string>
    <string name="request">request</string>
    <string name="cancel">cancel</string>
</resources>