<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Breakfast">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/dinner"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caloriesTxt1"
        app:layout_constraintVertical_bias="0.521" />

    <Button
        android:id="@+id/BackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bNumTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/num"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/stepsTxt1"
        android:layout_width="382dp"
        android:layout_height="145dp"
        android:layout_marginTop="16dp"
        android:text="@string/one_grapefruit_n_two_poached_eggs_or_fried_in_a_non_stick_pan_n_two_slices_whole_n_grain_toast_with_one_pat_of_butter_each_n_one_cup_low_fat_milk_n_one_cup_of_black_coffee_or_herbal_tea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/caloriesTxt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="164dp"
        android:text="@string/macronutrients_approximately_555_calories_with_27_grams_protein_63_grams_carbohydrates_and_23_grams_fat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/steps"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="408dp"
        android:layout_height="306dp"
        android:layout_marginTop="348dp"
        android:contentDescription="@string/dinnerpic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:srcCompat="@drawable/dinner"
        tools:ignore="VisualLintBounds" />

    <ImageButton
        android:id="@+id/ExitIBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/BackBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24"
        app:srcCompat="@drawable/cast_ic_notification_disconnect"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
        android:contentDescription="@string/exit" />

</androidx.constraintlayout.widget.ConstraintLayout>