<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GymOwnerAuthentication">

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/i_m_a_trainee" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:text="@string/i_m_a_gym_owner" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login"
        android:layout_alignStart="@+id/login"
        android:layout_alignEnd="@+id/login"
        android:layout_marginStart="-55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-54dp"
        android:layout_marginBottom="151dp"
        app:srcCompat="@drawable/onlylogoviva"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login"
        android:layout_alignStart="@+id/signup"
        android:layout_alignEnd="@+id/signup"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="50dp"
        android:text="@string/who_are_you" />

    <TextView
        android:id="@+id/continueWithoutSignup"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup"
        android:layout_alignStart="@+id/signup"
        android:layout_alignEnd="@+id/signup"
        android:layout_marginStart="2dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="-18dp"
        android:text="@string/continue_without_signing_in"
        android:textColor="#1976D2" />


</RelativeLayout>