<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact">

    <Button
        android:id="@+id/BackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"

        android:layout_height="110dp"
        android:background="@color/cardview_dark_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/Map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cardview_dark_background"
            android:scaleType="centerCrop"
            android:scaleX="0.7"
            android:scaleY="0.7"
            app:srcCompat="@drawable/map" />

        <ImageButton
            android:id="@+id/Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cardview_dark_background"
            android:scaleType="centerCrop"
            android:scaleX="0.7"
            android:scaleY="0.7"
            app:srcCompat="@drawable/home" />
    </LinearLayout>

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="212dp"
        android:layout_height="184dp"
        android:layout_marginTop="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/onlylogoviva" />

    <Button
        android:id="@+id/EmailUs"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/email_us"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.127" />

    <Button
        android:id="@+id/Whatsapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/whatsapp"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintEnd_toEndOf="@+id/EmailUs"
        app:layout_constraintStart_toStartOf="@+id/EmailUs"
        app:layout_constraintTop_toBottomOf="@+id/EmailUs"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="279dp"
        android:layout_height="63dp"
        android:layout_marginTop="52dp"
        android:background="@color/common_google_signin_btn_text_light_focused"
        android:backgroundTint="#FEFEFE"
        android:text="@string/if_you_have_any_thoughts_suggestions_or_n_if_you_just_want_to_say_hi_don_t_hesitate_to_n_contact_us_anytime"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />
</androidx.constraintlayout.widget.ConstraintLayout>